# ai-schools-workshop-silent_dragons

./: .coverage  .gitignore  Dockerfile  README.md  pyproject.toml  pyproject.toml            (edit: add pytest configuration)
app/: __init__.py  ai.py  data.py  main.py  models.py  overview.py  scoring.py  search.py  service.py
data/: district_geography.csv  districts.csv  schools.csv  zip_districts.csv
static/: app.js  district.html  district.js  index.html  school.html  school.js  styles.css
tests/: test_ai.py  test_api.py  test_data.py  test_hello.py         (create: basic "hello world" test)  test_overview.py  test_scoring.py  test_search.py  test_service.py
